--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "npx ts-node-dev src/index.ts",
+    "dev": "ts-node-dev ./src/index.ts",
+    "start": "node .dist/index.js",
     "build": "npx tsc"
   },
   "keywords": [],
@@ -26,5 +27,13 @@
   },
   "devDependencies": {
     "@types/md5": "^2.3.1"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/gui-nunes/api-marvel.git"
+  },
+  "bugs": {
+    "url": "https://github.com/gui-nunes/api-marvel/issues"
+  },
+  "homepage": "https://github.com/gui-nunes/api-marvel#readme"
 }
